feat: create taro example

--- a/GaiaXTaro/packages/gaiax-taro-demo/project.tt.json
+++ b/GaiaXTaro/packages/gaiax-taro-demo/project.tt.json
@@ -1,6 +1,6 @@
 {
   "miniprogramRoot": "./",
-  "projectname": "GaiaXTaro",
+  "projectname": "gaiax-taro-demo",
   "appid": "testAppId",
   "setting": {
     "es6": false,
