--- a/GaiaXTaro/.gitignore
+++ b/GaiaXTaro/.gitignore
@@ -1,6 +1,9 @@
-dist/
-deploy_versions/
-.temp/
-.rn_temp/
-node_modules/
-.DS_Store
+node_modules
+dist
+.idea
+
+.cache
+packages/remixapp/build
+packages/remixapp/public/build
+.env
+
