--- a/GaiaXTaro/packages/gaiax-taro-demo/package.json
+++ b/GaiaXTaro/packages/gaiax-taro-demo/package.json
@@ -42,8 +42,8 @@
     "@tarojs/taro": "3.4.12",
     "@tarojs/plugin-framework-react": "3.4.12",
     "@tarojs/react": "3.4.12",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react-dom": "^17.0.0",
+    "react": "^17.0.0",
     "gaiax-taro": "*"
   },
   "devDependencies": {
