--- a/GaiaXTaro/packages/gaiax-taro/package.json
+++ b/GaiaXTaro/packages/gaiax-taro/package.json
@@ -13,16 +13,16 @@
     "@tarojs/taro": "3.4.12",
     "@tarojs/plugin-framework-react": "3.4.12",
     "@tarojs/react": "3.4.12",
+    "react-dom": "^17.0.0",
+    "react": "^17.0.0",
     "@testing-library/react": "13.3.0",
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.14",
     "jest": "^27.4.3",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
     "rollup": "^2.60.2",
     "rollup-plugin-typescript2": "^0.31.1",
     "ts-jest": "^27.1.1",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.2"
+    "typescript": "^4.1.0"
   }
 }
