--- a/GaiaXTaro/packages/gaiax-taro/package.json
+++ b/GaiaXTaro/packages/gaiax-taro/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gaiax-taro",
+  "name": "@gaiax/taro",
   "version": "0.0.0",
   "main": "dist/index.js",
   "scripts": {
@@ -7,6 +7,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@tarojs/components": "3.4.12",
+    "@tarojs/runtime": "3.4.12",
+    "@tarojs/taro": "3.4.12",
+    "@tarojs/plugin-framework-react": "3.4.12",
+    "@tarojs/react": "3.4.12",
+    "react-dom": "^17.0.0",
+    "react": "^17.0.0"
+  },
+  "devDependencies": {
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.4.12",
     "@tarojs/runtime": "3.4.12",
@@ -15,7 +24,6 @@
     "@tarojs/react": "3.4.12",
     "react-dom": "^17.0.0",
     "react": "^17.0.0",
-    "@testing-library/react": "13.3.0",
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.14",
     "jest": "^27.4.3",
