--- a/GaiaXTaro/packages/gaiax-taro/tsconfig.build.json
+++ b/GaiaXTaro/packages/gaiax-taro/tsconfig.build.json
@@ -12,11 +12,17 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strictNullChecks": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "target": "es2017",
+    "module": "es6",
+    "outDir": "./lib"
   },
   "compileOnSave": false,
   "exclude": [
     "node_modules/*",
     "dist/*"
+  ],
+  "include": [
+    "src/**/*"
   ]
 }
