--- a/GaiaXTaro/packages/gaiax-taro/tsconfig.json
+++ b/GaiaXTaro/packages/gaiax-taro/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "jsxFactory": "React.createElement",
     "moduleResolution": "node",
     "noImplicitAny": false,
