--- a/GaiaXTaro/packages/gaiax-taro/package.json
+++ b/GaiaXTaro/packages/gaiax-taro/package.json
@@ -6,6 +6,7 @@
     "build": "rm -rf dist && rollup --config"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.4.12",
     "@tarojs/runtime": "3.4.12",
@@ -16,14 +17,18 @@
     "react": "^17.0.0"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
+    "@types/node": "^17.0.45",
+    "@types/webpack-env": "^1.13.6",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^16.9.5",
     "@types/jest": "^27.0.3",
     "jest": "^27.4.3",
     "rollup": "^2.60.2",
     "rollup-plugin-typescript2": "^0.31.1",
     "ts-jest": "^27.1.1",
     "tslib": "^2.3.1",
-    "@types/webpack-env": "^1.13.6",
-    "@types/react": "^17.0.2",
+    
     "@tarojs/mini-runner": "3.4.12",
     "@babel/core": "^7.8.0",
     "@tarojs/webpack-runner": "3.4.12",
