--- a/GaiaXTaro/.gitignore
+++ b/GaiaXTaro/.gitignore
@@ -1,12 +1,30 @@
+# Node modules
+node_modules/
 
+# Yarn and NPM files
+yarn-error.log
+package-lock.json
+
+# Template files
+.temp
+.DS_Store
+.eslintcache
+
+# Editor and IDE files
+.vscode
 .idea
-.cache
-.env
 
-learn-debug.log
-
-node_modules
-
-packages/**/lib/
+# Build outputs
+packages/gaiax-taro
 packages/**/dist/
 dist/
+
+# Docs outputs
+site/
+docs/h5/
+
+# Rollup visualizer file
+stats.html
+
+# Test files
+coverage
