--- a/GaiaXTaro/.gitignore
+++ b/GaiaXTaro/.gitignore
@@ -1,30 +1,13 @@
-# Node modules
-node_modules/
 
-# Yarn and NPM files
-yarn-error.log
-package-lock.json
-
-# Template files
-.temp
-.DS_Store
-.eslintcache
-
-# Editor and IDE files
-.vscode
 .idea
+.cache
+.env
 
-# Build outputs
-packages/gaiax-taro
+learn-debug.log
+
+node_modules
+
 packages/**/dist/
 dist/
-
-# Docs outputs
-site/
-docs/h5/
-
-# Rollup visualizer file
-stats.html
-
-# Test files
-coverage
+yarn-error.log
+package-lock.json
