feat: GXTemplateComponent type

--- a/GaiaXTaro/packages/gaiax-taro/tsconfig.json
+++ b/GaiaXTaro/packages/gaiax-taro/tsconfig.json
@@ -13,7 +13,8 @@
     "sourceMap": true,
     "strictNullChecks": true,
     "resolveJsonModule": true,
-    "outDir": "./dist/out-tsc",
+    "outDir": "./dist",
+    "declaration": true,
     "types": [
       "node"
     ],
@@ -27,8 +28,6 @@
     "node_modules"
   ],
   "include": [
-    "**/*.js",
-    "**/*.jsx",
     "**/*.ts",
     "**/*.tsx"
   ]
