--- a/GaiaXTaro/packages/gaiax-taro/package.json
+++ b/GaiaXTaro/packages/gaiax-taro/package.json
@@ -1,37 +1,37 @@
 {
   "name": "@gaiax/taro",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "main": "dist/index.js",
   "scripts": {
     "build": "rm -rf dist && rollup --config"
   },
   "dependencies": {
-    "classnames": "^2.2.6",
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.4.12",
-    "@tarojs/runtime": "3.4.12",
-    "@tarojs/taro": "3.4.12",
     "@tarojs/plugin-framework-react": "3.4.12",
     "@tarojs/react": "3.4.12",
-    "react-dom": "^17.0.0",
-    "react": "^17.0.0"
+    "@tarojs/runtime": "3.4.12",
+    "@tarojs/taro": "3.4.12",
+    "classnames": "^2.2.6",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.0",
+    "@tarojs/mini-runner": "3.4.12",
+    "@tarojs/webpack-runner": "3.4.12",
     "@types/classnames": "^2.3.1",
+    "@types/jest": "^27.0.3",
     "@types/node": "^17.0.45",
-    "@types/webpack-env": "^1.13.6",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^16.9.5",
-    "@types/jest": "^27.0.3",
+    "@types/webpack-env": "^1.13.6",
+    "babel-preset-taro": "3.4.12",
     "jest": "^27.4.3",
     "rollup": "^2.60.2",
     "rollup-plugin-typescript2": "^0.31.1",
     "ts-jest": "^27.1.1",
     "tslib": "^2.3.1",
-    "@tarojs/mini-runner": "3.4.12",
-    "@babel/core": "^7.8.0",
-    "@tarojs/webpack-runner": "3.4.12",
-    "babel-preset-taro": "3.4.12",
     "typescript": "^4.1.0"
   }
 }
