--- a/GaiaXTaro/packages/gaiax-taro/package.json
+++ b/GaiaXTaro/packages/gaiax-taro/package.json
@@ -1,37 +1,28 @@
 {
   "name": "@gaiax/taro",
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rm -rf dist && rollup --config"
+    "build": "rm -rf dist && rollup --config",
+    "test": "jest"
   },
   "dependencies": {
-    "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.4.12",
     "@tarojs/plugin-framework-react": "3.4.12",
     "@tarojs/react": "3.4.12",
     "@tarojs/runtime": "3.4.12",
     "@tarojs/taro": "3.4.12",
     "classnames": "^2.2.6",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.8.0",
-    "@tarojs/mini-runner": "3.4.12",
-    "@tarojs/webpack-runner": "3.4.12",
-    "@types/classnames": "^2.3.1",
+    "@testing-library/react": "13.3.0",
     "@types/jest": "^27.0.3",
-    "@types/node": "^17.0.45",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^16.9.5",
-    "@types/webpack-env": "^1.13.6",
-    "babel-preset-taro": "3.4.12",
+    "@types/react": "^17.0.14",
     "jest": "^27.4.3",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "rollup": "^2.60.2",
     "rollup-plugin-typescript2": "^0.31.1",
     "ts-jest": "^27.1.1",
     "tslib": "^2.3.1",
-    "typescript": "^4.1.0"
+    "typescript": "^4.5.2"
   }
 }
